<resources>

    <string name="app_name">超級單字本</string>
    <string name="third_preset_text">標籤</string>
    <string name="title_edit">編輯</string>
    <string name="title_all">全部</string>
    <string name="title_other">更多</string>
    <string name="title_settings">設定</string>
    <string name="added">已增加</string>
    <string name="add">增加</string>
    <string name="no_use">未輸入</string>
    <string name="I_E">輸入英文</string>
    <string name="I_C">輸入中文</string>
    <string name="I_T">第3欄內容(選填)</string>
    <string name="add_voc">增加單字</string>
    <string name="del">刪除</string>
    <string name="really">確定？</string>
    <string name="sure">確定</string>
    <string name="cancel">取消</string>
    <string name="no_input">沒有輸入</string>
    <string name="press_back_to_leave">再按一次Back退出</string>
    <string name="edittext_colornumber">輸入框的顏色代碼</string>
    <string name="rule_text">0123456789abcdefghijklmnopqrstuvwxyz
ABCDEFGHIJKLMNOPQRSTUVWXYZ`!"$^*()=#[]',./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="use_default_value">使用預設值</string>
    <string name="about_app">關於此程式</string>
    <string name="ok">OK</string>
    <string name="about">關於</string>
    <string name="show_Chinese">顯示中文</string>
    <string name="show_English">顯示英文</string>
    <string name="show_label">顯示%1$s</string>
    <string name="English">英文</string>
    <string name="Chinese">中文</string>
    <string name="line_three_name">第3欄名稱</string>
    <string name="there_isn_t_any_voc">沒有任何單字,去「編輯」頁面增加吧！</string>
    <string name="kidding">你在開玩笑嗎?</string>
    <string name="success">已修改為 %1$s</string>
    <string name="about_text">製作者:吳安仁\n</string>
    <string name="word_10">注意：字元大於10有可能重疊</string>
    <string name="back_to_default">返回預設值</string>
    <string name="on_a_save_text">自動儲存(注意：關閉此選項可能不會儲存您的單字)</string>
    <string name="off_a_save_text">自動儲存(注意：開啟此選項可能造成硬體一定的消耗)</string>
</resources>
