<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_edit"
        android:orderInCategory="0"
        android:icon="@drawable/icon_edit"
        android:title="@string/title_edit" />

    <item
        android:id="@+id/navigation_all"
        android:orderInCategory="1"
        android:icon="@drawable/icon_all"
        android:title="@string/title_all" />

    <item
        android:id="@+id/navigation_other"
        android:orderInCategory="2"
        android:icon="@drawable/icon_other"
        android:title="@string/title_other" />
    <item
        android:id="@+id/navigation_settings"
        android:orderInCategory="3"
        android:icon="@drawable/icon_settings"
        android:title="@string/title_settings" />

</menu>
